updated package-lock.json,server.js, swagger.json,testConnection.js,package.js
